<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="72dp"
              android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/iv_video_hint"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:layout_toStartOf="@+id/iv_video_hint">


        <TextView
            android:id="@+id/tv_step_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            tools:text="@string/step_number_text"/>

        <TextView
            android:id="@+id/tv_step_short_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            tools:text="@string/step_short_description"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_video_hint"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/video_description"/>

</RelativeLayout>