<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.android.bakingapp.fragments.RecipeDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/ingredients_tile_text"
                android:textColor="@android:color/white"
                android:padding="8dp"
                android:background="@color/colorPrimaryLight"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="0dp"
                android:paddingBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                tools:text="@string/ingredient_list_text"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:padding="8dp"
            android:text="@string/steps_text"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"/>


        <ListView
            android:id="@+id/lv_recipe_step_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

        </ListView>

    </LinearLayout>

</FrameLayout>
